@@ -23,6 +23,7 @@
 /* Global settings */
 
 #include <QString>
+#include <QSize>
 #include "config.h"
 #include "audioequalizerlist.h"
 
@@ -291,6 +292,7 @@ public:
 #if USE_MINIMUMSIZE
 	int gui_minimum_width;
 #endif
+	QSize default_size; // Default size of the main window
 
 #if ALLOW_TO_HIDE_VIDEO_WINDOW_ON_AUDIO_FILES
 	bool hide_video_window_on_audio_files;
